# halo2-playground

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/chips/: fib_1.rs  fib_2.rs  fib_3.rs  mod.rs  range_check_1.rs  range_check_2.rs  range_check_2_table.rs  range_check_3.rs  range_check_3_table.rs  range_check_4.rs  range_check_4_table.rs
src/circuits/: fib_1.rs  fib_2.rs  fib_3.rs  mod.rs  range_check_1.rs  range_check_2.rs  range_check_3.rs  range_check_4.rs
