[package]
name = "halo2-playground"
version = "0.1.0"
edition = "2021"

[lib]
name = "halo2_examples"
path = "src/lib.rs"
doctest = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dev-graph"]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0"}
# halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves"}
plotters = { version = "0.3.4", optional = true }
